--- a/index.html
+++ b/index.html
@@ -6,31 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunny Dodti | Portfolio</title>
     <base href="/portfolio-react/" />
-    
-    <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/javascript">
-      // Only run SPA redirect on GitHub Pages, not on Cloudflare Pages
-      if (window.location.hostname.includes('github.io')) {
-        // Single Page Apps for GitHub Pages
-        // MIT License
-        // https://github.com/rafgraph/spa-github-pages
-        (function(l) {
-          if (l.search[1] === '/' ) {
-            var decoded = l.search.slice(1).split('&').map(function(s) { 
-              return s.replace(/~and~/g, '&')
-            }).join('?');
-            window.history.replaceState(null, null,
-                l.pathname.slice(0, -1) + decoded + l.hash
-            );
-          }
-        }(window.location))
-      }
-    </script>
-    <!-- End Single Page Apps for GitHub Pages -->
-  </head>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+</html>
 </html>
