--- a/public/404.html
+++ b/public/404.html
@@ -4,27 +4,21 @@
     <meta charset="utf-8">
     <title>Portfolio - Page Not Found</title>
     <script type="text/javascript">
-      // GitHub Pages SPA redirect - only run on github.io domains
-      if (window.location.hostname.includes('github.io')) {
-        // Single Page Apps for GitHub Pages
-        // MIT License
-        // https://github.com/rafgraph/spa-github-pages
-        var pathSegmentsToKeep = 1;
-        var l = window.location;
-        l.replace(
-          l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-          l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-          l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-          (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-          l.hash
-        );
-      } else {
-        // For non-GitHub Pages (like Cloudflare), just show a simple 404
-        document.write('<h1>404 - Page Not Found</h1><p>This page does not exist.</p>');
-      }
+      // GitHub Pages SPA redirect
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      var pathSegmentsToKeep = 1;
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
+      );
     </script>
   </head>
   <body>
-    <!-- Content will be written by script or handled by the hosting platform -->
+    <!-- GitHub Pages SPA redirect in progress... -->
   </body>
 </html>
