--- a/public/404.html
+++ b/public/404.html
@@ -2,23 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Portfolio - Page Not Found</title>
+    <title>Portfolio - Redirecting...</title>
     <script type="text/javascript">
-      // GitHub Pages SPA redirect
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      var pathSegmentsToKeep = 1;
-      var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+      // Check if we're on GitHub Pages
+      if (window.location.hostname.includes('github.io')) {
+        // GitHub Pages SPA redirect
+        // MIT License
+        // https://github.com/rafgraph/spa-github-pages
+        var pathSegmentsToKeep = 1;
+        var l = window.location;
+        
+        // Redirect to index with encoded path
+        l.replace(
+          l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+          l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+          l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+          (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+          l.hash
+        );
+      } else {
+        // Not GitHub Pages - this file shouldn't be served by Cloudflare (they use _redirects)
+        // Fallback redirect to home
+        window.location.href = '/';
+      }
     </script>
   </head>
   <body>
-    <!-- GitHub Pages SPA redirect in progress... -->
+    <p>Redirecting...</p>
   </body>
 </html>
