--- a/index.html
+++ b/index.html
@@ -19,23 +19,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunny Dodti | Portfolio</title>
-    <base href="/portfolio-react/" />
-    
-    <!-- GitHub Pages SPA redirect handler - only for github.io -->
-    <script type="text/javascript">
-      // Only handle redirects on GitHub Pages
-      if (window.location.hostname.includes('github.io') && window.location.search[1] === '/') {
-        // Single Page Apps for GitHub Pages - redirect handler
-        // MIT License
-        // https://github.com/rafgraph/spa-github-pages
-        var decoded = window.location.search.slice(1).split('&').map(function(s) { 
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
-            window.location.pathname.slice(0, -1) + decoded + window.location.hash
-        );
-      }
-    </script>
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
